gcc/testsuite/gcc.dg/noncompile/940227-1.c
struct font {
  struct {
    char *line,*ulmask;
  } c[2];
} character[1] = { { {"", ""}, {"", ""} } }; /* { dg-error "extra|near|excess" } */
